add swagger openapi and create mock specs for auth endpoints
