# app/Http/Controllers/User/GetUserByIdController.php
@@ -2,6 +2,13 @@
 
 namespace App\Http\Controllers\User;
 
+/**
+ * @OA\Get(
+ *     path="/users/{userId}",
+ *     tags={"User"},
+ *     @OA\Response(response="200", description="Get user by given id.")
+ * )
+ */
 class GetUserByIdController extends UserController {
     public function __invoke(string $userId) {
         return $this->getUserById($userId);
